--- a/.env.sample 
+++ b/.env.sample 
@@ -1,4 +1,8 @@
 DEBUG=True
 SECRET_KEY=your-secret-key
 ALLOWED_HOSTS=localhost, 127.0.0.1
-DATABASE_URL=postgres://user:password@localhost:5432/mydatabase
+DB_NAME=db_name
+DB_USER=db_user
+DB_PASSWORD=db_password
+DB_HOST=db_host
+DB_PORT=db_port
